feat(03-capability-detectors-01): wire DETC-01 to DETC-03 detector outputs
- implement exec, network, and dynamic-load detectors over bytecode invoke/string evidence with correlation-based severity gates
- add additive indicator enrichment fields and emit source=detector capability findings with structured callsite locations
- expand demo fixture bytecode coverage for DETC-01..08 and compile DemoMod.class during sample build